--- a/CKeditor_Autocomplete/Index.html
+++ b/CKeditor_Autocomplete/Index.html
@@ -9,8 +9,27 @@
 <body>
 
     <textarea id="editor1" name="editor1">&lt;p&gt;Initial value.&lt;/p&gt;</textarea>
-    <script type="text/javascript">
-        CKEDITOR.replace('editor1');
+
+    <script>
+        CKEDITOR.replace('editor1', {
+            // Load the timestamp plugin.
+            extraPlugins: 'timestamp',
+            // Rearrange toolbar groups and remove unnecessary plugins.
+            toolbarGroups: [
+				{ name: 'clipboard', groups: ['clipboard', 'undo'] },
+				{ name: 'links' },
+				{ name: 'insert' },
+				{ name: 'document', groups: ['mode'] },
+				'/',
+				{ name: 'basicstyles', groups: ['basicstyles', 'cleanup'] },
+				{ name: 'paragraph', groups: ['list', 'indent'] },
+				{ name: 'styles' },
+				{ name: 'about' }
+            ],
+            removePlugins: 'font,iframe,pagebreak,flash,stylescombo,print,preview,save,smiley,pastetext,pastefromword',
+            removeButtons: 'Anchor,Font,Strike,Subscript,Superscript'
+        });
     </script>
+
 </body>
 </html>
